# range-mcl

./: .gitignore  LICENSE  README.md  requirements.txt
config/: build_map.yml  evaluation.yml  localization.yml
data/: README.md
results/: demo_loc_results.npz
src/: build_mesh_map.py  evaluate.py  initialization.py  main_range_mcl.py  map_module.py  motion_model.py  resample_module.py  sensor_model.py  time_utils.py  utils.py  vis_loc_result.py  visualizer.py
src/map_building/: __init__.py  build_mesh_map.py  compute_normals.py  simplify_ground_mesh.py  time_utils.py
src/map_building/c_utils/: CMakeLists.txt  README.md
src/map_building/c_utils/src/: c_gen_depth_and_normal.cpp  c_gen_normal_map.cpp  c_gen_virtual_scan.cpp
src/map_renderer/: __init__.py  glow.py  mesh.py  offscreen_window.py  renderer.py  renderer_instanced.py
src/map_renderer/shader/: draw_mesh.frag  drawtex.frag  render_instanced.frag  render_instanced.geom  render_instanced.vert  render_mesh.frag  render_mesh.geom  render_mesh.vert
